template/ingress/single-host/ingress-single-host.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clever-tadpole-deployment
  labels:
    app: clever-tadpole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clever-tadpole
  template:
    metadata:
      labels:
        app: clever-tadpole
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: clever-tadpole-service
spec:
  selector:
    app: clever-tadpole
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clever-tadpole-ingress
spec:
  rules:
  - host: "ingress.lan"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: clever-tadpole-service
            port:
              number: 80
